@@ -12760,6 +12760,16 @@ void menu_hardware_settings(MENU_ITEM_PARAMETERS)
 }
 
 
+void menu_hardware_memory_128k_multiplier(MENU_ITEM_PARAMETERS)
+{
+
+	z80_byte valor=mem128_multiplicador;
+
+	if (valor==4) valor=1;
+	else valor <<=1;
+
+	mem_set_multiplicador_128(valor);
+}
 
 //menu hardware settings
 void menu_hardware_memory_settings(MENU_ITEM_PARAMETERS)
@@ -12775,6 +12785,12 @@ void menu_hardware_memory_settings(MENU_ITEM_PARAMETERS)
 		menu_add_item_menu_shortcut(array_menu_hardware_memory_settings,'w');
 		menu_add_item_menu_tooltip(array_menu_hardware_memory_settings,"Allow write in ROM");
 		menu_add_item_menu_ayuda(array_menu_hardware_memory_settings,"Allow write in ROM. Only allowed on Spectrum 48k/16k models, ZX80, ZX81, Sam Coupe and Jupiter Ace (and not on Inves)");
+
+		if (MACHINE_IS_SPECTRUM_128_P2_P2A) {
+			menu_add_item_menu_format(array_menu_hardware_memory_settings,MENU_OPCION_NORMAL,menu_hardware_memory_128k_multiplier,NULL,"RAM size: %d KB",128*mem128_multiplicador);
+			menu_add_item_menu_tooltip(array_menu_hardware_memory_settings,"Allows setting more than 128k RAM on a 128k type machine");
+			menu_add_item_menu_ayuda(array_menu_hardware_memory_settings,"Allows setting more than 128k RAM on a 128k type machine");
+		}
 
 		if (menu_cond_zx8081() ) {
 
