@@ -9,6 +9,7 @@ Added menu to find and set lives in games
 Added actions commands to breakpoints, so you can run some actions when a breakpoint is fired
 Added up to three AY Chips
 Added emulation of other DAC chips appart from Specdrum: Covox, etc
+Added setting to set 256kb or 512kb on Spectrum 128k machines
 Fixed turbo mode and breakpoints. Breakpoints were disabled when changing turbo mode
 Fixed latency problems on all audio drivers
 Fixed AY sound bugs when volume levels where > 15
